# sft-client

./: Cargo.toml  readme.MD
api/protos/: auth.proto
src/: client.rs  data.rs  delegate.rs  main.rs  state.rs
src/page/: auth.rs  header.rs  main_page.rs  master.rs  mod.rs  setting.rs
src/state/: data.rs  friend.rs  header.rs  mod.rs
