[package]
name = "sft-client"
version = "0.1.0"
edition = "2021"

[dependencies]
druid = { version = "0.8" }
self_update = { version = "0.41" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
im = "15.1"

[build-dependencies]
tonic-build = "0.12"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# start binary
[[bin]]
name = "start"
path = "src/main.rs"